@@ -1,3 +1,4 @@
+* Add count wizard on inventory
 * Remove support for Python 2.7
 * Prevent delete lines if inventory is not draft or canceled
 * Manage same input and storage location in customer return shipment
